# SchwarzmanNetwork

./: .gitignore  README.md  pyproject.toml
.github/workflows/: brightdata-location-probe.yml  yearly-refresh.yml
data/audit/: brightdata_profile_decisions.csv  company_enrichment.csv  enrichlayer_profile_decisions.csv  enrichlayer_progress.json  linkedin_duplicate_review.csv  linkedin_search_decisions.csv
data/processed/: scholar_information.csv
data/public/: companies.csv  dataset_summary.json  scholars.csv  scholars.json  schwarzman_network.sqlite
data/raw/: official_scholars.json
data/seed/: employment_observations.csv  linkedin_profiles.csv  scholars.csv
docs/: architecture.md
schema/: schema.sql  views.sql
src/schwarzman_network/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/schwarzman_network/enrichment/: __init__.py  company.py  enrichlayer.py  linkedin_api.py  schema.py
src/schwarzman_network/matching/: __init__.py  adjudicator.py  context_alias.py  evidence.py  linkedin_quality.py  llm_client.py  llm_prompts.py  merge.py  post_profile.py  run_helpers.py  special_evidence.py  trials.py  validator.py
src/schwarzman_network/official/: __init__.py  cohort.py  extractor.py  parser.py
src/schwarzman_network/reporting/: __init__.py  coverage.py
src/schwarzman_network/search/: __init__.py  bing.py  brave.py  collector.py  duckduckgo.py  google.py  manual_import.py  normalize.py  queries.py
src/schwarzman_network/storage/: __init__.py  build_database.py  export_public.py  sqlite.py
